--- a/src/Ens/JobeetBundle/Resources/views/Job/edit.html.twig
+++ b/src/Ens/JobeetBundle/Resources/views/Job/edit.html.twig
@@ -1,9 +1,15 @@
+{% extends 'EnsJobeetBundle::layout.html.twig' %}
+
+{% block content %}
+
+{% endblock %}
+
 <h1>Job edit</h1>
 
 <form action="{{ path('ens_job_update', { 'id': entity.id }) }}" method="post" {{ form_enctype(edit_form) }}>
     {{ form_widget(edit_form) }}
     <p>
-        <button type="submit">Edit</button>
+        <button type="submit">Editt</button>
     </p>
 </form>
 
