--- a/src/Ens/JobeetBundle/Resources/views/Job/index.html.twig
+++ b/src/Ens/JobeetBundle/Resources/views/Job/index.html.twig
@@ -4,20 +4,27 @@
   {{ parent() }}
   <link rel="stylesheet" href="{{ asset('bundles/ensjobeet/css/jobs.css') }}" type="text/css" media="all" />
 {% endblock %}
- 
+
 {% block content %}
-    <div id="jobs">
-      <table class="jobs">
-        {% for entity in entities %}
-          <tr class="{{ cycle(['even', 'odd'], loop.index) }}">
-            <td class="location">{{ entity.location }}</td>
-            <td class="position">
-              	<a href="{{ path('ens_job_show', { 'id': entity.id, 'company': entity.companyslug, 'location': entity.locationslug, 'position': entity.positionslug}) }}">  {{ entity.position }}
-				</a>
-            </td>
-            <td class="company">{{ entity.company }}</td>
-          </tr>
-        {% endfor %}
-      </table>
-    </div>
+  <div id="jobs">
+    {% for category in categories %}
+      <div>
+        <div class="category">
+          <div class="feed">
+            <a href="">Feed</a>
+          </div>
+          {# <h1>{{ category.name }}</h1> #}
+          <h1><a href="{{ path('EnsJobeetBundle_category', { 'slug': category.slug }) }}">{{ category.name }}</a></h1>
+        </div>
+        {% include 'EnsJobeetBundle:Job:list.html.twig' with {'jobs': category.activejobs} %}
+
+        {% if category.morejobs %}
+          <div class="more_jobs">
+            and <a href="{{ path('EnsJobeetBundle_category', { 'slug': category.slug }) }}">{{ category.morejobs }} </a>
+          </div>
+        {% endif %}
+
+      </div>
+    {% endfor %}
+  </div>
 {% endblock %}
